# OpenMultiOmics-Cancer-Atlas

./: .gitattributes  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
configs/: cancer_type_registry.yaml  database_registry.yaml  omics_modality_registry.yaml  scoring_rules_general.yaml  species_mapping_rules.yaml
data/: README.md
docs/: ai_multiomics_analysis_context.md  atlas_definition_registry.md  atlas_definition_schema.md  atlas_portfolio_pipeline.md  atlas_qc_from_config.md  baseline_ai_multiomics_analysis.md  biological_insight_seed_report.md  cancer_type_expansion_plan.md  cross_atlas_comparison_pipeline.md  cross_atlas_dashboard_pipeline.md  cross_atlas_summary_report.md  data_governance.md  data_manifest_registry.md  end_to_end_demo_runner.md  end_to_end_release_bundle.md  epigenome_feature_store_pipeline.md  external_annotation_evidence_scaffold.md  full_keyword_public_omics_batch.md  gbm_public_omics_atlas.md  gbm_public_omics_atlas_pipeline.md  gbm_public_omics_atlas_qc_report.md  gdc_cancer_subset_export.md  gdc_file_counts_by_project.md  gdc_metadata_pipeline.md  gdc_priority_report.md  gdc_priority_visuals.md  gdc_project_inventory.md  gdc_project_modality_matrix.md  gdc_project_priority_ranker.md  gdc_project_subset.md  keyword_public_omics_atlas.md  keyword_public_omics_atlas_batch.md  keyword_public_omics_atlas_qc.md  keyword_public_omics_atlas_qc_batch.md  metabolomics_feature_store_pipeline.md  modality_execution_kernel.md  multi_atlas_architecture.md  (+56 more)
examples/: README.md  (+1 more)
(+272 files in other folders)
